[workspace]
members = [
  "h2o/boot",
  "h2o/kernel",
  "h2o/libs/*",
  "h2o/tinit",
  "src/bin/*",
  "src/drv/*",
  "src/lib/*",
  "src/lib/libc/ldso",
  "src/lib/h2o_std/core",
  "src/lib/h2o_rpc/core",
  "src/lib/h2o_rpc/macros",
  "src/lib/h2o_rpc/gen",
  "xtask",
]

exclude = [
  "src/bin/.cargo",
  "src/drv/.cargo",
]
