[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "xtask"
version = "0.1.0"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
cc = "1.0"
quote = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
structopt = "0.3"
syn = {version = "1.0", features = ["full"]}
