[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "xtask"
version = "0.1.0"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Local crates
bootfs = {path = "../src/lib/bootfs", features = ["gen"]}
osc = {path = "../src/lib/osc"}
# External crates
anyhow = "1.0"
cc = "1.0"
clap = {version = "4.1", features = ["derive"]}
postcard = {version = "1.0", default-features = false, features = ["use-std"]}
quote = "1.0"
rand = "0.8"
serde = {version = "1.0", default-features = false, features = ["derive", "alloc"]}
serde_json = "1.0"
toml = "0.7"
