[package]
authors = ["徐启航 <akucxy@163.com>"]
edition = "2018"
name = "h2o_boot"
version = "0.1.0"

[dependencies]
# Local crates
archop = {path = "../libs/archop"}
bitop_ex = {path = "../libs/bitop_ex"}
kargs = {path = "../libs/kargs"}
minfo = {path = "../libs/minfo"}
paging = {path = "../libs/paging"}
# External crates
log = "0.4"
object = {version = "0.26", default-features = false, features = ["read"]}
raw-cpuid = "9.0"
tinybmp = "0.3"
uefi = {version = "0.11", features = ["logger", "alloc"]}
