[package]
authors = ["徐启航 <akucxy@163.com>"]
edition = "2018"
name = "kernel"
version = "0.1.0"

[lib]
crate-type = ["staticlib"]
name = "h2o"
path = "src/kmain.rs"

[dependencies]
# Local crates
archop = {path = "../libs/archop"}
bitop_ex = {path = "../libs/bitop_ex"}
canary = {path = "../libs/canary"}
collection_ex = {path = "../libs/collection_ex"}
heap = {path = "../libs/heap"}
kargs = {path = "../libs/kargs"}
minfo = {path = "../libs/minfo"}
paging = {path = "../libs/paging"}
pmm = {path = "../libs/pmm"}
repeat = {path = "../libs/repeat"}
# External crates
bitflags = "1.2"
bitvec = {version = "0.22", default-features = false, features = ["atomic"]}
cfg-if = "1.0"
cty = "0.2"
lazy_static = {version = "1.4", features = ["spin_no_std"]}
log = "0.4"
modular-bitfield = "0.11"
paste = "1.0"
raw-cpuid = "9.0"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
static_assertions = "1.1"
va_list = {version = "0.1", default-features = false, features = ["no_std"]}

[build-dependencies]
bindgen = {version = "0.58", default-features = false, features = ["which-rustfmt"]}
