[package]
authors = ["Js2xxx"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "h2o_kernel"
version = "0.1.0"

[[bin]]
name = "h2o"
path = "src/kmain.rs"

[dependencies]
# Local crates
archop = {path = "../libs/archop"}
bitop_ex = {path = "../libs/bitop_ex"}
canary = {path = "../libs/canary"}
collection_ex = {path = "../libs/collection_ex"}
heap = {path = "../libs/heap"}
iter_ex = {path = "../libs/iter_ex"}
kargs = {path = "../libs/kargs"}
minfo = {path = "../libs/minfo"}
paging = {path = "../libs/paging"}
pmm = {path = "../libs/pmm"}
repeat = {path = "../libs/repeat"}
solvent = {path = "../libs/syscall", default-features = false}
# External crates
acpi = "4.1"
bitflags = "1.3"
bitvec = {version = "0.22", default-features = false, features = ["atomic"]}
bytes = {version = "1.1", default-features = false}
cfg-if = "1.0"
crossbeam-epoch = {version = "0.9", default-features = false, features = ["alloc"]}
crossbeam-queue = {version = "0.3", default-features = false, features = ["alloc"]}
crossbeam-utils = {version = "0.8", default-features = false}
cty = "0.2"
goblin = {version = "0.4", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
log = "0.4"
modular-bitfield = "0.11"
paste = "1.0"
raw-cpuid = "10"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
static_assertions = "1.1"
