[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "h2o_tinit"
version = "0.1.0"

[[bin]]
name = "tinit"
path = "src/tmain.rs"

[dependencies]
# Local crates
heap = {path = "../libs/heap"}
solvent = {path = "../../lib/h2o_rs", default-features = false, features = ["call"]}
sv-call = {path = "../libs/syscall", default-features = false, features = ["call"]}
# External crates
log = "0.4"
spin = "0.9"
