[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "h2o_tinit"
version = "0.1.0"

[[bin]]
name = "tinit"
path = "src/tmain.rs"

[dependencies]
# Local crates
bootfs = {path = "../../lib/bootfs", default-features = false}
dbglog = {path = "../../lib/dbglog", default-features = false, features = ["call"]}
heap = {path = "../libs/heap"}
solvent = {path = "../../lib/h2o_rs", default-features = false, features = ["call", "alloc"]}
sv-call = {path = "../libs/syscall", default-features = false, features = ["call"]}
targs = {path = "../libs/targs"}
# External crates
cstr_core = "0.2"
log = "0.4"
memchr = {version = "2.4", default-features = false}
object = {version = "0.28", default-features = false, features = ["elf", "read_core"]}
plain = "0.2"
spin = "0.9"
