[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "h2o_tinit"
version = "0.1.0"

[[bin]]
name = "tinit"
path = "src/tmain.rs"

[dependencies]
# Local crates
bootfs = {path = "../../src/lib/bootfs", default-features = false}
dbglog = {path = "../../src/lib/dbglog", default-features = false, features = ["call"]}
elfload = {path = "../../src/lib/elfload", default-features = false, features = ["call"]}
heap = {path = "../libs/heap"}
solvent = {path = "../../src/lib/h2o_rs", default-features = false, features = ["call", "alloc"]}
solvent-rpc = {path = "../../src/lib/h2o_rpc", default-features = false, features = ["call"]}
sv-call = {path = "../libs/syscall", default-features = false, features = ["call"]}
svrt = {path = "../../src/lib/svrt", default-features = false, features = ["call"]}
targs = {path = "../libs/targs"}
# External crates
log = "0.4"
plain = "0.2"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
