[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "solvent"
version = "0.1.0"

[features]
call = ["sv-call/call"]
default = ["stub"]
stub = ["sv-call/stub"]

[dependencies]
# Local crates
sv-call = {path = "../../h2o/libs/syscall", default-features = false}
# External crates
cfg-if = "1.0"
