[package]
edition = "2018"
name = "acpi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local crates
minfo = {path = "../minfo"}
paging = {path = "../paging"}
# External crates
cty = "0.2"
log = "0.4"
raw-cpuid = "9.0"
spin = "0.9"
va_list = {version = "0.1", default-features = false, features = ["no_std"]}

[build-dependencies]
bindgen = {version = "0.58", default-features = false, features = ["clap", "runtime", "which-rustfmt"]}
