[package]
authors = ["徐启航 <akucxy@163.com>"]
edition = "2021"
name = "archop"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local crates
bitop_ex = {path = "../bitop_ex"}
paging = {path = "../paging"}
# External crates
cfg-if = "1.0"
num-traits = {version = "0.2", default-features = false}
raw-cpuid = "10"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
