[package]
name = "collection_ex"
version = "0.1.0"
authors = ["徐启航 <akucxy@163.com>"]
edition = "2021"

[dependencies]
# Local crates
bitop_ex = {path = "../bitop_ex"}
iter_ex = { path = "../iter_ex"}
# External crates
bitvec = {version = "0.22", default-features = false, features = ["atomic", "alloc"]}
spin = "0.9"
