[package]
authors = ["Js2xxx"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "collection_ex"
version = "0.1.0"

[dependencies]
# Local crates
bitop_ex = {path = "../bitop_ex"}
iter_ex = {path = "../iter_ex"}
# External crates
bitvec = {version = "0.22", default-features = false, features = ["atomic", "alloc"]}
spin = {version = "0.9", features = ["use_ticket_mutex"]}
