[package]
authors = ["徐启航 <akucxy@163.com>"]
edition = "2018"
name = "heap"
version = "0.1.0"

[dependencies]
# Local crates
bitop_ex = {path = "../bitop_ex"}
paging = {path = "../paging"}
pmm = {path = "../pmm"}
# External crates
array-macro = "2.1"
bitvec = {version = "0.22", default-features = false, features = ["atomic"]}
cfg-if = "1.0"
intrusive-collections = {version = "0.9", default-features = false, features = ["nightly"]}
spin = "0.9"
static_assertions = "1.1"
