[package]
authors = ["Js2xxx"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "pmm"
version = "0.1.0"

[dependencies]
# Local crates
bitop_ex = {path = "../bitop_ex"}
iter_ex = {path = "../iter_ex"}
paging = {path = "../paging"}
# External crates
intrusive-collections = {version = "0.9", default-features = false, features = ["nightly"]}
log = "0.4"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
