[package]
edition = "2021"
name = "solvent"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
call = []
default = ["call"]

[dependencies]
# Local crates
solvent-gen = {path = "../syscall_gen"}
# External crates
cfg-if = "1.0"
log = "0.4"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
