[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "sv-call"
version = "0.1.0"

[features]
call = []
vdso = []
default = ["stub"]
stub = []

[dependencies]
# Local crates
sv-gen = {path = "../syscall_gen"}
# External crates
bitflags = "1.3"
cfg-if = "1.0"

[build-dependencies]
cbindgen = "0.20"
