[package]
edition = "2021"
name = "ldso"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local crates
dbglog = {path = "../../dbglog"}
elfload = {path = "../../elfload"}
iter_ex = {path = "../../../h2o/libs/iter_ex"}
solvent = {path = "../../h2o_rs"}
svrt = {path = "../../svrt"}
rpc = {path = "../../rpc"}
# External crates
cstr_core = "0.2"
goblin = {version = "0.4", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
log = "0.4"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
