[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "elfload"
version = "0.1.0"

[features]
call = ["solvent/call"]
default = ["solvent/default"]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs", default_features = false}
# External crates
goblin = {version = "0.5", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
log = "0.4"
