[package]
edition = "2021"
name = "solvent-ddk"
version = "0.1.0"

[features]
ddk = []
default = ["ddk"]

[dependencies]
# Local crates
dbglog = {path = "../dbglog"}
solvent = {path = "../h2o_rs", default-features = false}
solvent-async = {path = "../h2o_async", default-features = false}
solvent-core = {path = "../h2o_std/core"}
solvent-fs = {path = "../h2o_fs", default-features = false}
solvent-rpc = {path = "../h2o_rpc", default-features = false}
# External crates
async-task = {version = "4.3", default-features = false}
log = "0.4"
