[package]
edition = "2021"
name = "solvent-fs"
version = "0.1.0"

[features]
default = ["runtime"]
runtime = ["solvent-async/runtime", "solvent-rpc/runtime"]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs"}
solvent-async = {path = "../h2o_async", default-features = false}
solvent-core = {path = "../libr/core"}
solvent-rpc = {path = "../h2o_rpc", default-features = false, features = ["std"]}
svrt = {path = "../svrt"}
# External crates
log = "0.4"
ouroboros = {version = "0.15", default-features = false}
