[package]
edition = "2021"
name = "solvent-fs"
version = "0.1.0"

[features]
default = ["runtime", "std-local"]
runtime = ["solvent-async/runtime", "solvent-rpc/runtime"]
std-local = []

[dependencies]
# Local crates
elfload = {path = "../elfload"}
solvent = {path = "../h2o_rs"}
solvent-async = {path = "../h2o_async", default-features = false}
solvent-core = {path = "../h2o_std/core"}
solvent-rpc = {path = "../h2o_rpc", default-features = false, features = ["std"]}
svrt = {path = "../svrt"}
# External crates
async-task = {version = "4.3", default-features = false}
async-trait = "0.1"
crossbeam-queue = {version = "0.3", default-features = false, features = ["alloc"]}
futures-lite = {version = "1.12", default-features = false, features = ["alloc"]}
log = "0.4"
ouroboros = {version = "0.15", default-features = false}
