[package]
edition = "2021"
name = "solvent-rpc"
version = "0.1.0"

[features]
call = [
  "solvent/call",
  "solvent-rpc-core/call",
]
core = [
  "solvent/default",
  "solvent-rpc-core/compact",
]
default = ["std"]
std = [
  "dep:solvent-core",
  "dep:solvent-async",
  "solvent/default",
  "solvent-rpc-core/default",
  "dep:crossbeam",
  "dep:futures",
]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs", default-features = false}
solvent-async = {path = "../h2o_async", optional = true}
solvent-rpc-core = {path = "core", default-features = false}
solvent-core = {path = "../libr/core", optional = true}
# External crates
bitflags = "1.3"
cfg-if = "1.0"
crossbeam = {version = "0.8", default-features = false, features = ["alloc"], optional = true}
futures = {version = "0.3", default-features = false, features = ["alloc"], optional = true}
thiserror-impl = "1.0"

[build-dependencies]
solvent-rpc-gen = {path = "gen"}
