[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "solvent-std"
version = "0.1.0"

[dependencies]
# Local crates
dbglog = {path = "../dbglog"}
heap = {path = "../../../h2o/libs/heap", default-features = false}
solvent = {path = "../h2o_rs"}
solvent-core = {path = "core"}
solvent-fs = {path = "../h2o_fs", default-features = false, features = ["std-local"]}
svrt = {path = "../svrt"}
# External crates
log = "0.4"
memchr = {version = "2.5", default-features = false}
