[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "co2"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Local crates
heap = {path = "../../../h2o/libs/heap", features = ["tcache"]}
solvent = {path = "../h2o_rs"}
solvent-rpc = {path = "../h2o_rpc", default_features = false, features = ["core"]}
svrt = {path = "../svrt"}
# External crates
bitvec = {version = "1.0", default-features = false, features = ["atomic"]}
log = "0.4"
memchr = {version = "2.4", default-features = false}

[build-dependencies]
cbindgen = {version = "0.24", default-features = false}
