[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "libr"
version = "0.1.0"

[dependencies]
# Local crates
dbglog = {path = "../dbglog"}
heap = {path = "../../../h2o/libs/heap", default-features = false}
solvent = {path = "../h2o_rs"}
svrt = {path = "../svrt"}
# External crates
crossbeam = {version = "0.8", default-features = false}
log = "0.4"
