[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "solvent-std"
version = "0.1.0"

[dependencies]
# Local crates
dbglog = {path = "../dbglog"}
heap = {path = "../../../h2o/libs/heap", default-features = false}
solvent = {path = "../h2o_rs"}
solvent-rpc-core = {path = "../h2o_rpc/core", default-features = false, features = ["compact"]}
svrt = {path = "../svrt"}
# External crates
crossbeam = {version = "0.8", default-features = false, features = ["alloc"]}
log = "0.4"
memoffset = "0.6"
