[package]
edition = "2021"
name = "rpc"
version = "0.1.0"

[features]
async = ["dep:solvent-async"]
call = ["solvent/call", "solvent-rpc/call"]
compact = ["solvent/default", "solvent-rpc/core"]
default = ["compact", "async"]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs", default-features = false}
solvent-async = {path = "../h2o_async", optional = true}
solvent-rpc = {path = "../h2o_rpc", default-features = false}
