[package]
edition = "2021"
name = "rpc"
version = "0.1.0"

[features]
call = ["solvent/call", "solvent-rpc/call"]
compact = ["solvent/default", "solvent-rpc/core"]
default = ["compact"]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs", default-features = false}
solvent-rpc = {path = "../h2o_rpc", default-features = false}
