[package]
edition = "2021"
name = "svrt"
version = "0.1.0"

[features]
call = ["solvent/call", "solvent-rpc-core/call"]
default = ["solvent/default", "solvent-rpc-core/compact"]

[dependencies]
# Local crates
solvent = {path = "../h2o_rs", default_features = false}
solvent-rpc-core = {path = "../h2o_rpc/core", default_features = false}
# External crates
modular-bitfield = "0.11"
spin = {version = "0.9", features = ["use_ticket_mutex"]}
